Spring/Bank/src/main/java/com/example/demo/errors/CustomerDoesntExistsException.java
package com.example.demo.errors;

public class CustomerDoesntExistsException extends Exception {

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

}
